<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Direction">

    <Button
        android:id="@+id/xbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/x_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ybutton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ybutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/y_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/zbutton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/xbutton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/zbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/z_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ybutton"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>